<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_extra_bold"
            android:gravity="center"
            android:text="@string/title_detail_qr"
            android:textColor="@color/purple_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/grey"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:fontFamily="@font/manrope_extra_bold"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_amount"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="start"
                    android:text="@string/ref"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_ref"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="start"
                    android:text="@string/provider"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_prestataire"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="start"
                    android:text="@string/city"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnAnnuler"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/annuler"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="13sp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/purple_500"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/confirmer"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>