<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_fingerprint_lock"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_semi_bold"
            android:gravity="center"
            android:text="@string/message_empreinte_digitale" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_no"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/non_merci"
                android:textColor="@color/purple_500"
                android:textSize="12sp"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btn_yes"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:text="@string/oui"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
